Further contrast error fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -321,7 +321,7 @@ footer a {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
@@ -393,6 +393,7 @@ footer a {
 
 .management-container a {
   font-weight: bold;
+  font-size: 1.3rem;
 }
 
 
@@ -408,6 +409,10 @@ footer a {
   font-size: 0.9em;
   margin-top: 4px;
   display: block;
+}
+
+.validation-message {
+  font-size: 1.1em !important;
 }
 
 .form-container button {
@@ -444,13 +449,14 @@ footer a {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
 .required {
   color: red;
   font-weight: bold;
+  font-size: 1.5em;
 }
 
 .form-instructions {
@@ -473,7 +479,6 @@ input.error + span {
 #togglePassword {
   display: inline-block;
   padding: 8px 12px;
-  font-size: 1rem;
   background-color: #007bff;
   color: white;
   border: none;
@@ -558,7 +563,7 @@ input::placeholder {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 .form-container button:hover {
